# deforisk-jupyter-nb-v2

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
component/script/: __init__.py  config.py  create_periods.py  dataset.py  far_helpers.py  geo_utils.py  processing.py  project.py  sampling.py
component/script/gee/: ee_raster_export.py
component/script/utilities/: file_filter.py  file_helpers.py  resources.py
component/script/variables/: __init__.py  gee_var.py  local_raster_var.py  local_vector_var.py  models.py  variable.py  variables.py
component/script/xarray/: dask_reproject_rio.py  remap_xarray.py
docs/: build_docs.sh  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  models_overview.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/tutorials/: variable_factory.rst
notebooks/: 1.get_variables copy.ipynb  1.get_variables.ipynb  1.variables_factory.ipynb  2.process_data_sepal copy.ipynb  2.process_data_sepal.ipynb  2.process_factory.ipynb  3.benchmark_jnr_model.ipynb  4.mw_model.ipynb  5.1.far_models_sampling.ipynb  5.2.far_glm.ipynb  5.2.glm_model.ipynb  5.3.far_icar.ipynb  5.4.far_rf.ipynb  7.deforestation_allocation.ipynb
